Terraform for AWS II/AWS RDS/createinstacne.tf

resource "aws_key_pair" "levelup_key" {
    key_name = "levelup_key"
    public_key = file(var.PATH_TO_PUBLIC_KEY)
}

resource "aws_instance" "MyFirstInstnace" {
  ami           = lookup(var.AMIS, var.AWS_REGION)
  instance_type = "t2.micro"
  availability_zone = "us-east-2a"
  key_name      = aws_key_pair.levelup_key.key_name
  vpc_security_group_ids = [aws_security_group.allow-levelup-ssh.id]
   # we need to associate security group to the instance as well 
  subnet_id = aws_subnet.levelupvpc-public-1.id
  # Also define the subnet as well 
  tags = {
    Name = "custom_instance"
  }

}
# Also printing the public ip of the instance 
output "public_ip" {
  value = aws_instance.MyFirstInstnace.public_ip 
}
